--- a/css/global.css
+++ b/css/global.css
@@ -41,3 +41,48 @@ body {
       max-width: 1230px;
    }
 }
+
+/* ==== Utility classes */
+
+.ff-upper {
+   font-family: var(--ff-uppercase);
+   font-weight: 500;
+   text-transform: uppercase;
+}
+.ff-lower {
+   font-family: var(--ff-lowercase);
+}
+
+.btn-primary {
+   --bs-btn-color: #fff;
+   --bs-btn-bg: #ea0000;
+   --bs-btn-border-color: #ea0000;
+   --bs-btn-hover-color: #fff;
+   --bs-btn-hover-bg: #bc0000;
+   --bs-btn-hover-border-color: #ea0000;
+   --bs-btn-focus-shadow-rgb: 49, 132, 253;
+   --bs-btn-active-color: #fff;
+   --bs-btn-active-bg: #bc0000;
+   --bs-btn-active-border-color: #bc0000;
+   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+   --bs-btn-disabled-color: #fff;
+   --bs-btn-disabled-bg: #bc0000;
+   --bs-btn-disabled-border-color: #bc0000;
+}
+
+.btn-info {
+   --bs-btn-color: #ffffff;
+   --bs-btn-bg: #333333;
+   --bs-btn-border-color: #0d1719;
+   --bs-btn-hover-color: #ffffff;
+   --bs-btn-hover-bg: #0d1719;
+   --bs-btn-hover-border-color: #0d1719;
+   --bs-btn-focus-shadow-rgb: 11, 172, 204;
+   --bs-btn-active-color: #ffffff;
+   --bs-btn-active-bg: #0d1719;
+   --bs-btn-active-border-color: #25cff2;
+   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+   --bs-btn-disabled-color: #ffffff;
+   --bs-btn-disabled-bg: #282828;
+   --bs-btn-disabled-border-color: #282828;
+}
