--- a/css/products.css
+++ b/css/products.css
@@ -6,6 +6,9 @@
 .product {
    flex: 1 1 50%;
    max-width: 23.7919rem;
+   padding: 1rem;
+   background-color: var(--clr-white);
+   box-shadow: var(--clr-light) 0px 2px 8px 0px;
 }
 @media (min-width: 480px) {
    .product {
