--- a/css/products.css
+++ b/css/products.css
@@ -1,11 +1,11 @@
 .product-list {
    display: flex;
-   gap: 20px;
+   gap: 0rem;
    flex-wrap: wrap;
 }
 .product {
    flex: 1 1 50%;
-   max-width: 23.7919rem;
+   max-width: 26.7331rem;
    padding: 1rem;
    background-color: var(--clr-white);
    box-shadow: var(--clr-light) 0px 2px 8px 0px;
