--- a/css/header.css
+++ b/css/header.css
@@ -2,14 +2,47 @@
    background-color: var(--clr-light);
    color: var(--clr-white);
    padding-block: 0.8rem;
+   min-height: 64px;
+}
+
+.header nav {
+   height: 100%;
+}
+
+.header__logo {
+   justify-self: flex-start;
+   overflow: hidden;
+   width: 12rem;
+   height: 100%;
 }
 
 .header__logo img {
-   max-width: 18rem;
+   max-width: 100%;
 }
 
-.header__container,
-.nav-menu,
+@media (min-width: 576px) {
+   .header__logo {
+      width: 18rem;
+   }
+}
+
+.header__container {
+   width: 100%;
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+   justify-items: space-between;
+   gap: 1.5rem;
+   align-items: center;
+}
+
+.header__nav-and-cart {
+   display: flex;
+   align-items: center;
+   flex-wrap: nowrap;
+   gap: 10px;
+   justify-content: flex-end;
+}
+
 .nav-menu__cart {
    display: flex;
    gap: 10px;
@@ -17,15 +50,105 @@
    margin: 0;
 }
 
-.header__container {
-   justify-content: space-between;
-   margin-inline: auto;
+.header__burger-btn {
+   z-index: 21;
+   display: block;
+   position: relative;
+   width: 30px;
+   height: 20px;
+   cursor: pointer;
+   justify-self: flex-end;
 }
 
-.header__burger-btn {
-   display: none;
+@media (min-width: 992px) {
+   .header__burger-btn {
+      display: none;
+   }
+}
+
+.header__burger-line,
+.header__burger-btn::before,
+.header__burger-btn::after {
+   left: 0;
+   position: absolute;
+   height: 2px;
+   width: 100%;
+   transition: all 0.4s ease;
+   background-color: var(--clr-white);
+}
+
+.header__burger-btn::before,
+.header__burger-btn::after {
+   content: "";
+}
+
+.header__burger-btn::before {
+   top: 0;
+}
+
+.header__burger-btn::after {
+   bottom: 0;
+}
+
+.header__burger-line {
+   top: 50%;
+   transform: scale(1) translateY(-50%);
+}
+
+.header__burger-btn._active .header__burger-line {
+   transform: scale(0) translateY(-50%);
+}
+
+.header__burger-btn._active::before {
+   top: 50%;
+   transform: rotate(-45deg) translateY(-50%);
+}
+
+.header__burger-btn._active::after {
+   bottom: 50%;
+   transform: rotate(45deg) translateY(50%);
 }
 
 .nav-menu__cart-icon {
    color: var(--clr-white);
+}
+
+.header__menu {
+   position: fixed;
+   z-index: 20;
+   left: 101%;
+   top: 0;
+   width: 100%;
+   height: 100%;
+   background: var(--clr-light);
+   transition: left 0.6s ease;
+   overflow: auto;
+   padding-top: 40px;
+   text-align: center;
+   margin-bottom: 20px;
+}
+
+@media (min-width: 992px) {
+   .nav-menu,
+   .nav-menu__cart {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      justify-content: flex-end;
+      margin: 0;
+      position: static;
+      padding: 0;
+   }
+}
+
+.header__menu._active {
+   left: 0;
+   display: flex;
+   flex-direction: column;
+   gap: 2rem;
+   font-size: 2rem;
+}
+
+.header__menu._active .btn {
+   font-size: 2rem;
 }
