--- a/css/header.css
+++ b/css/header.css
@@ -43,7 +43,8 @@
    justify-content: flex-end;
 }
 
-.nav-menu__item:hover {
+.nav-menu__item:hover,
+.btn.btn-secondary.dropdown-toggle:hover {
    color: var(--clr-accent-dark);
 }
 
@@ -148,10 +149,53 @@
    left: 0;
    display: flex;
    flex-direction: column;
+   align-items: center;
    gap: 2rem;
    font-size: 2rem;
 }
 
 .header__menu._active .btn {
    font-size: 2rem;
+}
+
+.header__menu._active form {
+   order: 2;
+}
+
+.header__menu._active form .form-control::placeholder {
+   font-size: 2rem;
+}
+
+.btn-secondary {
+   --bs-btn-color: #fff;
+   --bs-btn-bg: #6c757d;
+   --bs-btn-border-color: #6c757d;
+   --bs-btn-hover-color: #fff;
+   --bs-btn-hover-bg: #5c636a;
+   --bs-btn-hover-border-color: #565e64;
+   --bs-btn-focus-shadow-rgb: 130, 138, 145;
+   --bs-btn-active-color: #fff;
+   --bs-btn-active-bg: #565e64;
+   --bs-btn-active-border-color: #51585e;
+   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+   --bs-btn-disabled-color: #fff;
+   --bs-btn-disabled-bg: #6c757d;
+   --bs-btn-disabled-border-color: #6c757d;
+}
+
+.btn.btn-secondary.dropdown-toggle {
+   background-color: var(--clr-light);
+   border: none;
+}
+
+.nav-menu__search-btn {
+   border: 1px solid var(--clr-white);
+   color: var(--clr-white);
+}
+.nav-menu__search-btn:hover {
+   --bs-btn-hover-bg: var(--clr-light);
+   --bs-btn-hover-border-color: var(--clr-accent-dark);
+   --bs-btn-hover-color: var(--clr-accent-dark);
+   --bs-btn-active-bg: var(--clr-accent-dark);
+   --bs-btn-active-border-color: var(--clr-accent-dark);
 }
